--- a/exMedia.html
+++ b/exMedia.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/desafio1.js"></script></body></script>
+    <script src="/exMedia.js"></script>
 </body>
 </html>
